<resources>
    <string name="app_name">Waceplare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Поиск</string>
    <string name="Favorite">Избранное</string>
    <string name="Ads">Объявления</string>
    <string name="Messages">Сообщения</string>
    <string name="Profile">Профиль</string>
    <string name="empty">Ничего не найдено</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth">Авторизация</string>
    <string name="reg">Регистрация</string>
    <string name="my_ads">Мои объявления</string>
    <string name="place_ad">Разместить объявление</string>
    <string name="profile">Профиль</string>
    <string name="messages">Сообщения</string>
    <string name="favorites">Избранное</string>
</resources>