<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_manage_search_24"
        android:title="@string/Search" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/Favorite" />
    <item
        android:id="@+id/navigation_ads"
        android:icon="@drawable/baseline_post_add_24"
        android:title="@string/Ads" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/Messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/Profile" />

</menu>